@@ -5,6 +5,8 @@
     separately configuring and filtering these violations.
   - Fixed DiscouragedModules and DeprecatedFeatures policy violations to report
     severity as configured.
+  - Fixed DeprecatedFeatures to avoid false positives on method calls with the
+    same name as autoderef functions.
 
 0.027     2018-06-20 20:17:06 EDT
   - Add LoopOnHash policy
